--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,334 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 207 95% 8%;
+    --foreground: 201 83% 81%;
+    --muted: 207 12% 15%;
+    --muted-foreground: 207 12% 65%;
+    --popover: 207 95% 5%;
+    --popover-foreground: 201 83% 91%;
+    --card: 207 95% 6%;
+    --card-foreground: 201 83% 86%;
+    --border: 207 85% 13%;
+    --input: 207 85% 16%;
+    --primary: 205 85% 78%;
+    --primary-foreground: 205 85% 18%;
+    --secondary: 205 30% 25%;
+    --secondary-foreground: 205 30% 85%;
+    --accent: 207 95% 23%;
+    --accent-foreground: 207 95% 83%;
+    --destructive: 8 91% 59%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 205 85% 78%;
+    --radius: 0.5rem;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.honeywarp {
+  width: 335px;
+  height: 661px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  overflow: hidden;
+  z-index: -1;
+  filter: brightness(0.6);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.honeycomb {
+  /* margin: 0 45px; */
+  /* width: 89px; */
+  width: 154px;
+  border-radius: 100%;
+  height: 154px;
+  background-color: white;
+  position: absolute;
+  position: absolute;
+  opacity: 0.5;
+}
+/* .honeycomb:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 45px solid white;
+  border-top: 77px solid transparent;
+  border-bottom: 77px solid transparent;
+  position: absolute;
+  left: -44.55px;
+}
+.honeycomb:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -44.55px;
+  border-left: 45px solid white;
+  border-top: 77px solid transparent;
+  border-bottom: 77px solid transparent;
+} */
+
+.type1 {
+  box-shadow: 0px 0px 0px white;
+  opacity: 0.1;
+}
+
+.type2 {
+  box-shadow: 0px 0px 10px white;
+  opacity: 0.3;
+}
+
+.type3 {
+  box-shadow: 0px 0px 20px white;
+  opacity: 0.5;
+}
+
+.terminal_honeycomb1 {
+  left: 193px;
+  top: 181px;
+}
+
+.terminal_honeycomb2 {
+  left: 193px;
+  top: 346px;
+}
+
+.terminal_honeycomb3 {
+  left: 51px;
+  top: 263px;
+}
+
+.terminal_honeycomb4 {
+  left: 51px;
+  top: 426px;
+}
+
+.terminal_honeycomb5 {
+  /* margin: 0 22px;
+  width: 43px; */
+  width: 74px;
+  height: 74px;
+  background-color: white;
+  position: absolute;
+  left: 10px;
+  top: 385px;
+}
+/* .terminal_honeycomb5:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 22px solid white;
+  border-top: 37px solid transparent;
+  border-bottom: 37px solid transparent;
+  position: absolute;
+  left: -22px;
+}
+.terminal_honeycomb5:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -22px;
+  border-left: 22px solid white;
+  border-top: 37px solid transparent;
+  border-bottom: 37px solid transparent;
+} */
+
+.terminal_honeycomb6 {
+  /* margin: 0 22px;
+  width: 43px; */
+  width: 74px;
+  height: 74px;
+  background-color: white;
+  position: absolute;
+  left: 147px;
+  top: 226px;
+}
+/* .terminal_honeycomb6:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 22px solid white;
+  border-top: 37px solid transparent;
+  border-bottom: 37px solid transparent;
+  position: absolute;
+  left: -22px;
+}
+.terminal_honeycomb6:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -22px;
+  border-left: 22px solid white;
+  border-top: 37px solid transparent;
+  border-bottom: 37px solid transparent;
+} */
+
+.terminal_honeycomb7 {
+  /* margin: 0 8px;
+  width: 16px; */
+  width: 28px;
+  height: 28px;
+  background-color: white;
+  position: absolute;
+  left: 137px;
+  top: 170px;
+}
+/* .terminal_honeycomb7:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 8px solid white;
+  border-top: 14px solid transparent;
+  border-bottom: 14px solid transparent;
+  position: absolute;
+  left: -8px;
+}
+.terminal_honeycomb7:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -8px;
+  border-left: 8px solid white;
+  border-top: 14px solid transparent;
+  border-bottom: 14px solid transparent;
+} */
+
+.terminal_honeycomb8 {
+  /* margin: 0 41px;
+  width: 81px; */
+  width: 140px;
+  height: 140px;
+  background-color: white;
+  position: absolute;
+  left: 293px;
+  top: 40px;
+}
+/* .terminal_honeycomb8:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 41px solid white;
+  border-top: 70px solid transparent;
+  border-bottom: 70px solid transparent;
+  position: absolute;
+  left: -41px;
+}
+.terminal_honeycomb8:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -41px;
+  border-left: 41px solid white;
+  border-top: 70px solid transparent;
+  border-bottom: 70px solid transparent;
+} */
+
+.terminal_honeycomb9 {
+  /* margin: 0 19px;
+  width: 37px; */
+  width: 64px;
+  height: 64px;
+  background-color: white;
+  position: absolute;
+  left: 220px;
+  top: 10px;
+}
+/* .terminal_honeycomb9:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 19px solid white;
+  border-top: 32px solid transparent;
+  border-bottom: 32px solid transparent;
+  position: absolute;
+  left: -19px;
+}
+.terminal_honeycomb9:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -19px;
+  border-left: 19px solid white;
+  border-top: 32px solid transparent;
+  border-bottom: 32px solid transparent;
+} */
+
+.terminal_honeycomb10 {
+  /* margin: 0 79px;
+  width: 158px; */
+  width: 273px;
+  height: 273px;
+  background-color: white;
+  position: absolute;
+  left: 234px;
+  top: 204px;
+}
+/* .terminal_honeycomb10:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 79px solid white;
+  border-top: 136.5px solid transparent;
+  border-bottom: 136.5px solid transparent;
+  position: absolute;
+  left: -79px;
+}
+.terminal_honeycomb10:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -79px;
+  border-left: 79px solid white;
+  border-top: 136.5px solid transparent;
+  border-bottom: 136.5px solid transparent;
+} */
+
+.terminal_honeycomb11 {
+  /* margin: 0 64px;
+  width: 127px; */
+  width: 220px;
+  height: 220px;
+  background-color: white;
+  position: absolute;
+  left: 218px;
+  top: 438px;
+}
+/* .terminal_honeycomb11:before {
+  content: ' ';
+  width: 0;
+  height: 0;
+  border-right: 64px solid white;
+  border-top: 110px solid transparent;
+  border-bottom: 110px solid transparent;
+  position: absolute;
+  left: -64px;
+}
+.terminal_honeycomb11:after {
+  content: '';
+  width: 0;
+  position: absolute;
+  right: -64px;
+  border-left: 64px solid white;
+  border-top: 110px solid transparent;
+  border-bottom: 110px solid transparent;
+} */
+
+.clip-path {
+  clip-path: circle(50% at 50% 50%);
+}
+.custom-shadow {
+  filter: drop-shadow(0 0px 5px rgb(255 255 255));
+}
+
+@layer base {
+  * {
+    @apply border-border;
   }
+  body {
+    @apply bg-background text-foreground;
+  }
+  /* body > * {
+    outline: 1px solid red;
+  } */
 }
